Fix IntelliJ warnings and modernize Java usage
Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>